# PrediCup

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: __init__.py  access.py  config.py  flags.py  main.py  scheduler.py  teams.py
bot/db/: models.py  repo.py  session.py
bot/handlers/: admin.py  chat_utils.py  common.py  dev.py  predictions.py
bot/keyboards/: vote.py
bot/services/: backup.py  labels.py  leaderboard.py  matches.py  notifications.py  presentation.py  scoring.py
bot/services/football/: base.py  factory.py  football_data_org.py  mock.py  openfootball.py
config/: config.example.yaml
scripts/: adjust_points.py  export_users.py  fetch_fixtures.py  inspect_db.py  set_labels.py  votes.py
tests/: conftest.py  test_backup.py  test_flow.py  test_labels_bonus.py  test_labels_import.py  test_leaderboard.py  test_migration.py  test_openfootball_parse.py  test_playoff_scoring.py  test_provider_mock.py  test_reverify.py  test_scoring.py  test_teams.py  test_upsert_prediction.py
