[project]
name = "predicup"
version = "0.1.0"
description = "Telegram-бот предсказаний на ЧМ-2026"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "aiosqlite>=0.20",
    "APScheduler>=3.10,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "PyYAML>=6.0",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.9",  # для socks5-прокси к Telegram (если api.telegram.org режут)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
